Fix unit tests (Windows...) - Part 2